--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,12 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [project]
-name = "mcp-task-rmq-queue"
+name = "rabbitmq-mcp-task-queue"
 version = "0.1.0"
 description = "RabbitMQ-based TaskMessageQueue implementation for MCP (Model Context Protocol)"
 readme = "README.md"
 requires-python = ">=3.11"
-license = {text = "MIT"}
+license = {text = "Apache-2.0"}
 authors = [
     {name = "Your Name", email = "your.email@example.com"},
 ]
@@ -16,7 +16,7 @@ keywords = ["mcp", "rabbitmq", "task-queue", "model-context-protocol", "async"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Developers",
-    "License :: OSI Approved :: MIT License",
+    "License :: OSI Approved :: Apache Software License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.11",
     "Programming Language :: Python :: 3.12",
@@ -24,15 +24,15 @@ classifiers = [
     "Topic :: System :: Distributed Computing",
 ]
 dependencies = [
-    "mcp>=1.3.0",
+    "mcp>=1.25.0",
     "pika>=1.3.0",
     "anyio>=4.0.0",
 ]
 
 [project.urls]
-Homepage = "https://github.com/yourusername/mcp-task-rmq-queue"
-Repository = "https://github.com/yourusername/mcp-task-rmq-queue"
-Issues = "https://github.com/yourusername/mcp-task-rmq-queue/issues"
+Homepage = "https://github.com/kenliao94/rabbitmq-mcp-task-queue"
+Repository = "https://github.com/kenliao94/rabbitmq-mcp-task-queue"
+Issues = "https://github.com/kenliao94/rabbitmq-mcp-task-queue/issues"
 
 [tool.hatch.build.targets.wheel]
 packages = ["rabbitmq_mcp_task_queue"]
